--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.547.0",
     "nuxt": "^4.1.3",
+    "reka-ui": "^2.6.0",
+    "shadcn-nuxt": "2.3.2",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.15",
+    "tw-animate-css": "^1.4.0",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
-  "packageManager": "pnpm@9.7.0+sha512.dc09430156b427f5ecfc79888899e1c39d2d690f004be70e05230b72cb173d96839587545d09429b55ac3c429c801b4dc3c0e002f653830a420fa2dd4e3cf9cf"
+  "packageManager": "pnpm@9.7.0+sha512.dc09430156b427f5ecfc79888899e1c39d2d690f004be70e05230b72cb173d96839587545d09429b55ac3c429c801b4dc3c0e002f653830a420fa2dd4e3cf9cf",
+  "devDependencies": {
+    "typescript": "^5.9.3"
+  }
 }
