--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5.9.3"
   },
     "engines": {
-        "node": "22"
+        "node": ">=22.0.0",
+        "npm": ">=10.0.0"
     }
 }
