add dockerfile test to deploy

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 API_URL=http://localhost:8000
-SITE_URL=http://localhost:3000
+FRONT_URL=http://localhost:3000
+NITRO_PORT=3000
+PORT=3000
+NODE_ENV=production
