--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "tailwindcss": "^4.1.15",
         "tw-animate-css": "^1.4.0",
         "vue": "^3.5.22",
-        "vue-router": "^4.5.1"
+        "vue-router": "^4.5.1",
+        "vue-sonner": "^2.0.9"
     },
     "packageManager": "pnpm@9.7.0+sha512.dc09430156b427f5ecfc79888899e1c39d2d690f004be70e05230b72cb173d96839587545d09429b55ac3c429c801b4dc3c0e002f653830a420fa2dd4e3cf9cf",
     "devDependencies": {
